--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 </ul>
             </nav>
             <a href="#" class="btn">Ro'yxatdan o'tish</a>
+            <a href="#" class="darkmode">
+                <img src="./images/dark_icon.png" class="dark_icon" width="25" alt="dark_icon">
+                <img src="./images/light_icon.png" class="ligth_icon light_icon_hidden" width="25" alt="light_icon">
+            </a>
         </div>
     </header>
     <!-- Main -->
@@ -174,5 +178,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="./js/app.js"></script>
 </body>
 </html>
